# GigaLearnCPP

./: .gitignore  CMakeLists.txt  README.md  RLBOT_TESTING_GUIDE.md  SaveMilestones.ps1  TRAINING_SETUP_SUMMARY.md  journey.md  rebuild.bat
GigaLearnCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/: CMakeLists.txt
GigaLearnCPP/python_scripts/: metric_receiver.py
checkpoints/6465017344/: RUNNING_STATS.json
checkpoints/6472534528/: RUNNING_STATS.json
checkpoints/6480014336/: RUNNING_STATS.json
checkpoints/6487504384/: RUNNING_STATS.json
checkpoints/6495013376/: RUNNING_STATS.json
checkpoints/6502537216/: RUNNING_STATS.json
checkpoints/6510061568/: RUNNING_STATS.json
checkpoints/6514844672/: RUNNING_STATS.json
checkpoints/6517503488/: RUNNING_STATS.json
checkpoints/6525008896/: RUNNING_STATS.json
checkpoints/6532535296/: RUNNING_STATS.json
checkpoints/6534355968/: RUNNING_STATS.json
checkpoints/6540008448/: RUNNING_STATS.json
checkpoints/6547549184/: RUNNING_STATS.json
checkpoints/6555027456/: RUNNING_STATS.json
checkpoints/6562530304/: RUNNING_STATS.json
checkpoints/6570015744/: RUNNING_STATS.json
checkpoints/6577507328/: RUNNING_STATS.json
milestones/: .saved_list.txt
rlbot/: CppPythonAgent.py  GigaLearnBot.cfg  GigaLearnBot2.cfg  rlbot.cfg
rlbotOLD/: CppPythonAgent.py  GigaLearnBot.cfg
rlbotOld2/: CppPythonAgent.cfg  CppPythonAgent.py  GigaLearnBot.cfg  appearance.cfg  port.cfg  requirements.txt  rlbot.cfg
src/: CustomBasicMechanicsRewards.h  CustomKickoffRewards.h  CustomRewards.h  ExampleMain.cpp  RLBotExample.cpp
(+105 files in other folders)
